--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -18,7 +18,7 @@
 \maketitle
 \begin{abstract}
 Dramatic improvements in browser performance have now made JavaScript a viable compilation target for a wide range of programming languages.
-While targetting JavaScript is fairly easy, navigating optimization tiers wrapped in arcane magic and mystery make squeezing erformance out of modern JavaScript engines incredibly difficult.
+While targetting JavaScript is fairly easy, navigating optimization tiers wrapped in arcane magic and mystery make squeezing performance out of modern JavaScript engines incredibly difficult.
 In this paper we explore the implementation of a fully capable Java virtual machine. One that supports: class loading, interpretation, dynamic compilation, on-stack-replacement, deoptimization, threading, synchronization, garbage collection, finalization, many of the features that make Java, Java.
 \end{abstract}
 
@@ -85,11 +85,13 @@ This is how e wrote it all, and the problmens we ran into.
 
 \subsection{Garbage Collection}
 
-\subsection{Performance Tunning}
+\subsection{Performance Tuning}
 
 \subsubsection{Startup Speed}
 
 \subsubsection{Memory Usage}
+
+\subsection{Host VM Tuning}
 
 \subsection{Citations}
 
